<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notepad v3</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_delete">Delete Note</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Edit Note</string>
    <string name="user_settings">User Settings</string>
    <string name="preferences">Preferences</string>
    <string name="note_date">Date</string>
</resources>
