<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/title" />
		<EditText android:id="@+id/title" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/body" />
		<EditText android:id="@+id/body" android:layout_width="match_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:scrollbars="vertical" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent" android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/note_date" />
		<Button android:id="@+id/note_date" android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:layout_weight="1" 
			android:onClick="onNoteDateButtonClick"/>
	</LinearLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:gravity="center|center_horizontal">
		<RatingBar android:id="@+id/rtRating" android:layout_width="wrap_content"
			android:layout_height="fill_parent" android:numStars="5" android:max="5"
			android:saveEnabled="true" />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal"
		android:layout_width="match_parent" android:layout_height="wrap_content">
		<Button android:id="@+id/confirm" android:text="@string/confirm"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />

		<Button android:id="@+id/delete" android:text="@string/delete"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:id="@+id/cancel" android:text="@string/cancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
</LinearLayout>